# Zhuhebang-Phase-Field-Methods

./: README.md
muBreakdown-main/: CMakeLists.txt  Makefile  README.md  backward.f90  breakdown main code.txt  calc_inverse.f90  create_random_seed.f90  electric.f90  forward.f90  globalvars.f90  gradient.f90  iniconf.f90  input.in  main.f90  periodic.f90  separation.f90
muFerro-main/: .gitignore  .taplo.toml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template  LICENSE  README.md
muFerro-main/.github/workflows/: build_test.yml  gh-page.yml
muFerro-main/cmake/: CPackConfig.cmake  Version.cmake
muFerro-main/docs/: .gitignore  Doxyfile  conf.py  index.md  overview.md
muFerro-main/docs/examples/: basic.md  index.md
muFerro-main/docs/tutorial/: get_started.md  index.md  model.md  program.md  setup.md
muFerro-main/examples/basic/: input.toml  material.toml
muFerro-main/potentials/: BFO-New-19.json  BFO-OT-Xue-2014.json  BFO-OT-Xue-2016.json  BFO-Vasudevan-2012.json  BFO-Xue-2014.json  BFO-Xue-2018-RTphase.json  BFO-Zhang-2008.json  BTO-Bell-1984.json  BTO-Li-2005.json  BTO-Wang-2007.json  BTO-Wang-2010.json  KNN-Pohlmann-2017.json  KNO-Liang-2009.json  PMN30PT-Khakpash-2015.json  PMN30PT-Zhang-2017.json  PMN42PT-Khakpash-2015.json  PMN70PT-Khakpash-2015.json  PMNPT-Hong-2014.json  PTO-Li-2018-refit.json  PZN8PT-Li-2016.json  PZT-Haun-1988.json  PZT-Haun-1988_052.json  Rules_for_test  STO-Sheng-2010.json
muFerro-main/potentials/NA/: BFO-Zhang-2007.json  BTO-stress-Wang-2010.json  LNO-DAS-2005.json
muFerro-main/scripts/linux/: clean_build.sh  cmake_build.sh  cmake_configure.sh  doc_build.sh  oneapi.sh
muFerro-main/src/: CMakeLists.txt  data.f90  finalize.f90  input.f90  input.toml  main.f90  output.f90  setup.f90  solve.f90
muFerro-main/src/setup/: elastic.f90  electric.f90  ferroelectric.f90  initial.f90  tdgl.f90
muFerro-main/stash/: Ferro_custom.f90  Ferro_modules.f90  Ferroelectric.f90  chargeDistribution.f90
muFerro-main/stash/doc/MUPRO-ferro-manual/: mupro-ferro.bib.bak  mupro-ferro.tex
muFerro-main/stash/doc/MUPRO-tutorial/: demo.tex
muFerro-main/stash/doc/website/: README.md  gatsby-config.js  package.json
muFerro-main/stash/doc/website/source/: index.mdx
muFerro-main/stash/doc/website/source/customization/: introduction.md
muFerro-main/stash/doc/website/source/documentations/: files.md  introduction.md  output.md  quick-tutorial.md  structure.md
muFerro-main/stash/doc/website/source/examples/: introduction.md
muFerro-main/stash/doc/website/source/installation/: introduction.md
muFerro-main/stash/doc/website/source/resources/: faq.md  publications.md  references.md
muFerro-main/stash/doc/website/static/: CNAME
muFerro-main/stash/examples/bulk/0D-thermodyn/: input.in  pot.in
muFerro-main/stash/examples/bulk/1D-DW/: Polar.in  input.in  pot.in
muFerro-main/stash/examples/bulk/2D-polydomain/: input.in  xv.pbs
muFerro-main/stash/examples/bulk/2D-superlattice/: input.in
muFerro-main/stash/examples/bulk/3D-poling/: input.in
muFerro-main/stash/examples/bulk/3D-quenching/: input.in  pot.in  xv.pbs
muFerro-main/stash/examples/dislocation/: input.in
muFerro-main/stash/examples/film/3D-applyBias/: input.in
muFerro-main/stash/examples/film/3D-island/: AFMtip.in  input.in  pot.in  pot1.in  pot2.in  struct.in
muFerro-main/stash/examples/film/3D-quenching/: input.in  xv.pbs
muFerro-main/stash/examples/film/Inhomo-composition/: README  comp.py
muFerro-main/stash/examples/film/Inhomo-material/: input.in  pot3.in
muFerro-main/stash/examples/film/polygrain/: input.in  rotation.in
muFerro-main/stash/examples/membrane/: input.in
muFerro-main/stash/examples/stash/: pot1.in  pot2.in  pot4.in  struct.in  td_input.in
(+6 files in other folders)
